--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="logo">
-        <img alt="logo Sirius" class = "logo" src="sirius_logo.png"/>
+        <img alt="logo Sirius" class = "logo" src="./assets/sirius_logo.png"/>
     </div>
     <section class="main-section">
         <div class="first-title-container">
@@ -36,11 +36,11 @@
                     <span>
                         <div class="first-title-container">
                             <div class="title">
-                                <h2>Snytko Yana</h2>
+                                <h2>Daemen Christian</h2>
                             </div>
                         </div>
-                        <img src="assets/profile.jpg" class="profile-pic"/>
-                        <p>Bonjour, je m'appelle Yana. Actuellement j'ai 22 ans. Afin d'obtenir mon diplôme en Bachelier en Technique infographique, option Design Graphique, à la HEPL, il me reste mon TFE à terminer. En parallèle je suis une formation de Gestionnaire de projet en marketing digital à l'IFAPME. </p>
+                        <img src="./assets/avatar.jpg" class="profile-pic"/>
+                        <p>J'ai toujours été passioner par la programmation web mais la vie ma fait prendre un autre chemin.</p>
                     </span>
                 </div>
             </div>
